--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ before_script:
 
 script:
   # Build docker image
-  - travis_wait docker build -t $DOCKER_IMAGE_NAME .;
+  - docker build -t $DOCKER_IMAGE_NAME .;
 
 deploy:
   provider: script
