travis: Add quiet option to docker build to reduce the log size, and use travis_wait with 50m limit

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ before_script:
 
 script:
   # Build docker image
-  - docker build -t $DOCKER_IMAGE_NAME .;
+  - travis_wait 50 docker build -q -t $DOCKER_IMAGE_NAME .;
 
 deploy:
   provider: script
